Add quotes to example.conf "DB" value
Otherwise it's not a valid bash file

--- a/example.conf
+++ b/example.conf
@@ -6,7 +6,7 @@
 #   - export SCI_SESSION_SECRET
 
 # DB: MySQL connection string, such as "user:password@tcp(localhost:port)/databasename"
-DB=user:password@tcp(localhost:port)/databasename
+DB="user:password@tcp(localhost:port)/databasename"
 
 # Debug mode allows faking users by their id - effectively sets the value for the authenticated user header
 DEBUG=false
