Make auth header configurable

--- a/example.conf
+++ b/example.conf
@@ -16,3 +16,7 @@ BIND_ADDRESS=":8080"
 
 # SessionSecret is used for encrypting session data into cookies so they're "secure enough"
 SESSION_SECRET="changeme"
+
+# AuthHeader tells the app where a user's name comes in (Apache basic auth
+# uses "X-Remote-User", but Shibboleth uses "Remote_user")
+AUTH_HEADER="Remote_user"
