config: Add values to hold LDAP configuration

--- a/example.conf
+++ b/example.conf
@@ -20,3 +20,9 @@ SESSION_SECRET="changeme"
 # AuthHeader tells the app where a user's name comes in (Apache basic auth
 # uses "X-Remote-User", but Shibboleth uses "Remote_user")
 AUTH_HEADER="Remote_user"
+
+# LDAP Settings
+LDAP_SERVER="example.org:389"
+LDAP_BIND_USER="ldapuser"
+LDAP_BIND_PASS="ldappass"
+LDAP_BASE_DN="dc=ad,dc=example,dc=org"
