Add CSV importer

--- a/example.conf
+++ b/example.conf
@@ -26,3 +26,6 @@ LDAP_SERVER="example.org:389"
 LDAP_BIND_USER="ldapuser"
 LDAP_BIND_PASS="ldappass"
 LDAP_BASE_DN="dc=ad,dc=example,dc=org"
+
+# CSV file location for files dropped off by Banner
+CSV_PATH="/var/sci/csv"
