config: Separate import and export CSV paths

--- a/example.conf
+++ b/example.conf
@@ -28,4 +28,7 @@ LDAP_BIND_PASS="ldappass"
 LDAP_BASE_DN="dc=ad,dc=example,dc=org"
 
 # CSV file location for files dropped off by Banner
-CSV_PATH="/var/sci/csv"
+BANNER_CSV_PATH="/var/sci/csvin"
+
+# CSV file location for files we're going to send to Canvas
+CANVAS_CSV_PATH="/var/sci/csvout"
