Get setting ready for translation api

--- a/example.conf
+++ b/example.conf
@@ -32,3 +32,6 @@ BANNER_CSV_PATH="/var/sci/csvin"
 
 # CSV file location for files we're going to send to Canvas
 CANVAS_CSV_PATH="/var/sci/csvout"
+
+# Hostname of server where duckid/uni-id lookups happen
+TRANSLATOR_HOST="https://blah.uoregon.edu"
