translator: add support for API request headers

--- a/example.conf
+++ b/example.conf
@@ -35,3 +35,8 @@ CANVAS_CSV_PATH="/var/sci/csvout"
 
 # Hostname of server where duckid/uni-id lookups happen
 TRANSLATOR_HOST="https://blah.uoregon.edu"
+
+# List of headers needed for the API call.  Key/value pairs are separated by a
+# colon since header field names can't contain a colon.  Multiple headers must
+# be separated by a CTRL-^ (0x1E) to allow for any valid value.
+TRANSLATOR_API_HEADERS="foo:barbaz:quuz"
