config: separate lookup URLs for more flexibility
This will allow us to avoid code changes while following the in-dev
service URL changes.  Adds a test to verify the translation.

--- a/example.conf
+++ b/example.conf
@@ -33,8 +33,10 @@ BANNER_CSV_PATH="/var/sci/csvin"
 # CSV file location for files we're going to send to Canvas
 CANVAS_CSV_PATH="/var/sci/csvout"
 
-# Hostname of server where duckid/uni-id lookups happen
-TRANSLATOR_HOST="https://blah.uoregon.edu"
+# URL for duckid/bannerid lookups.  "{{duckid}}" and "{{bannerid}}" are
+# replaced in the code by the value being searched.
+LOOKUP_BY_DUCKID_URL="https://blah.uoregon.edu/lookup?duckid={{duckid}}"
+LOOKUP_BY_BANNERID_URL="https://blah.uoregon.edu/lookup?bannerid={{bannerid}}"
 
 # List of headers needed for the API call.  Key/value pairs are separated by a
 # colon since header field names can't contain a colon.  Multiple headers must
