--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
 
       # specify any bash command here prefixed with `run: `
       - run: go get -u github.com/golang/lint/golint
-      - run: go get
+      - run: make deps
       - run: make
       - run: make validate
       - run: make test
