Add config for exporting to Canvas

--- a/example.conf
+++ b/example.conf
@@ -38,7 +38,15 @@ CANVAS_CSV_PATH="/var/sci/csvout"
 LOOKUP_BY_DUCKID_URL="https://blah.uoregon.edu/lookup?duckid={{duckid}}"
 LOOKUP_BY_BANNERID_URL="https://blah.uoregon.edu/lookup?bannerid={{bannerid}}"
 
-# List of headers needed for the API call.  Key/value pairs are separated by a
-# colon since header field names can't contain a colon.  Multiple headers must
-# be separated by a CTRL-^ (0x1E) to allow for any valid value.
+# List of headers needed for the UO person API call.  Key/value pairs are
+# separated by a colon since header field names can't contain a colon.
+# Multiple headers must be separated by a CTRL-^ (0x1E) to allow for any valid
+# value.
 TRANSLATOR_API_HEADERS="foo:barbaz:quuz"
+
+# Canvas endpoint URL
+CANVAS_API_URL="https://blah.uoregon.edu/canvas-import"
+
+# Headers needed for the Canvas API call.  Format is the same as the person
+# lookup's header format above.
+CANVAS_API_HEADERS="foo:barbaz:quux"
