Make example config more dev-friendly

--- a/example.conf
+++ b/example.conf
@@ -6,22 +6,29 @@
 #   - export SCI_SESSION_SECRET
 
 # DB: MySQL connection string, such as "user:password@tcp(localhost:port)/databasename"
-DB="user:password@tcp(localhost:port)/databasename"
+DB="sci:sci@tcp(127.0.0.1:3306)/sci"
 
-# Debug mode allows faking users by their id - effectively sets the value for the authenticated user header
-DEBUG=false
+# Debug mode allows faking users by their id - effectively sets the value for
+# the authenticated user header.  DO NOT set this true in production!!
+DEBUG=true
 
-# Bind address: typical production use would be ":80"
+# Bind address: typical production use would be ":80", which means "the SCI
+# server should listen on any IP address on port 80".  For development, we tend
+# to go with port 8080 because it's less likely to clash and doesn't require
+# sudo.
 BIND_ADDRESS=":8080"
 
 # SessionSecret is used for encrypting session data into cookies so they're "secure enough"
 SESSION_SECRET="changeme"
 
-# AuthHeader tells the app where a user's name comes in (Apache basic auth
-# uses "X-Remote-User", but Shibboleth uses "Remote_user")
+# AuthHeader tells the app where a user's name comes in (Apache basic auth uses
+# "X-Remote-User", but Shibboleth uses "Remote_user").  This isn't used for
+# development.
 AUTH_HEADER="Remote_user"
 
-# LDAP Settings
+# LDAP Settings - this is required for development to to full, end-to-end
+# testing.  There's no way to look up user data without a configured LDAP
+# server.
 LDAP_SERVER="example.org:389"
 LDAP_BIND_USER="ldapuser"
 LDAP_BIND_PASS="ldappass"
