--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,4 @@ jobs:
 
       # specify any bash command here prefixed with `run: `
       - run: go get -u github.com/golang/lint/golint
-      - run: make deps
-      - run: make
-      - run: make validate
-      - run: make test
+      - run: make ci
