Dockerize the entire application

--- a/example.conf
+++ b/example.conf
@@ -6,7 +6,7 @@
 #   - export SCI_SESSION_SECRET
 
 # DB: MySQL connection string, such as "user:password@tcp(localhost:port)/databasename"
-DB="sci:sci@tcp(127.0.0.1:3306)/sci"
+DB="sci:sci@tcp(db:3306)/sci"
 
 # Debug mode allows faking users by their id - effectively sets the value for
 # the authenticated user header.  DO NOT set this true in production!!
